# RegimeChangeDetection

./: .gitignore  .pre-commit-config.yaml  00_feature_engineering_and_volatility_regimes.ipynb  00_plot_regime_change.ipynb  01_hmm_regime_analysis.ipynb  01_predict_regime_change.ipynb  AGENTS.md  README.md  REPORT.md  deribit_utils.py  hmm_utils.py  pyproject.toml  regime_change_utils.py  regime_prediction_utils.py  requirements.txt
regime_change/: 00_get_deribit_data.ipynb  pytest.ini
regime_change/tests/: __init__.py  conftest.py
regime_change/tests/unit/: __init__.py  test_deribit_utils.py
