[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-change-detection"
version = "0.1.0"
description = "Regime change detection research toolkit for Deribit market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "matplotlib==3.9.4",
    "tqdm==4.67.3",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "hmmlearn==0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.12.11",
    "mypy==1.11.2",
    "pre-commit==4.3.0",
    "jupyterlab==4.5.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
